force-app/main/default/objects/Form_LCF_Payment_Trigger_1__c/Form_LCF_Payment_Trigger_1__c.object-meta.xml
<CustomObject>
    <description>Life Chances Fund Grant Management - Payment Trigger - 1.0</description>
    <label>Form LCF Payment Trigger 1.0</label>
    <nameField>
        <displayFormat>PT-{00000}</displayFormat>
        <label>Payment Trigger ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LCF Grant Payment Triggers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>