force-app/main/default/objects/Form_LCF_Payment_Trigger_1__c/fields/grant_baseline__c.field-meta.xml
<CustomField>
    <fullName>grant_baseline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form LCF Grant Baseline 1.0</label>
    <referenceTo>Form_LCF_Grant_Baseline_1__c</referenceTo>
    <relationshipLabel>Form LCF Payment Triggers</relationshipLabel>
    <relationshipName>grant_payment_triggers</relationshipName>
    <type>Lookup</type>
</CustomField>