force-app/main/default/objects/Form_LCF_Payment_Trigger_1__c/fields/pt_description__c.field-meta.xml
<CustomField>
    <fullName>pt_description__c</fullName>
    <inlineHelpText>Description</inlineHelpText>
    <label>PT - Description</label>
    <type>TextArea</type>
</CustomField>